Changed pngs for svgs and added favicon if frontend would be used outside of HA

--- a/src/i18n/locales/cs/common.json
+++ b/src/i18n/locales/cs/common.json
@@ -2,7 +2,7 @@
   "app": {
     "title": "Luftator Control",
     "nav": {
-      "dashboard": "Dashboard",
+      "dashboard": "Přehled",
       "valves": "Ventily",
       "settings": "Nastavení",
       "navigate": "Navigace",
