--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -140,8 +140,8 @@
         "modeNameRequired": "Mode name is required",
         "modeCreated": "Mode created",
         "modeUpdated": "Mode updated",
-        "deleteSuccessTitle": "Mode deleted",
-        "deleteSuccessMessage": "Mode deleted successfully",
+        "modeDeleteSuccessTitle": "Mode deleted",
+        "modeDeleteSuccessMessage": "Mode deleted successfully",
         "invalidPower": "Power must be between 0 and 90",
         "invalidTemperature": "Temperature must be between -50 and 100",
         "toggleFailedTitle": "Failed to toggle event",
